<resources>
    <string name="app_name">SceytUiKit</string>

    <string name="login_title">Getting Started</string>
    <string name="login_subtitle">Just enter your username, click connect button and start</string>
    <string name="username">Username</string>
    <string name="connect">connect</string>
    <string name="connection_failed">Connection failed</string>
    <string name="channels">Channels</string>
    <string name="search_for_channels">Search for channels</string>
    <string name="search">Search</string>
    <string name="your_last_message">You: %1$s</string>
    <string name="copy">Copy</string>
    <string name="no_channels">No Channels</string>
    <string name="no_channels_sub_header">You have no created channels yet, create one for sending messages</string>
    <string name="profile">Profile</string>
    <string name="no_results_found">No results found</string>
    <string name="message">Message</string>
    <string name="online">Online</string>
    <string name="members_count">%1$d members</string>
    <string name="done">done</string>
    <string name="label_create_new_channel">New Channel</string>
    <string name="_public">Public</string>
    <string name="_private">Private</string>
    <string name="direct">direct</string>
    <string name="hint_uri">URI</string>
    <string name="hint_channel_subject">Subject</string>
    <string name="label_create_public_channel">Public Channel</string>
    <string name="hint_avatar_url">Avatar URL</string>
    <string name="hint_label">Label</string>
    <string name="hint_metadata">Metadata</string>
    <string name="label_create_private_channel">Private Channel</string>
    <string name="label_create_direct_channel">Direct Channel</string>
    <string name="hint_members">Members</string>
    <string name="add_members">Add members</string>
    <string name="edited">Edited</string>
    <string name="message_was_deleted">Message was deleted</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="channel">Channel</string>
    <string name="notifications">Notifications</string>
    <string name="clear_history">Clear history</string>
    <string name="sceyt_members">Members</string>
    <string name="make_admin">Make admin</string>
    <string name="remove_member">Kick member</string>
    <string name="sceyt_block_and_kick_member">Block and kick member</string>
    <string name="member_name_you">(You)</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="take_photo">Take photo</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="file">File</string>
    <string name="new_channel">New Channel</string>
    <string name="make_channel_private">Make channel private</string>
    <string name="make_channel_private_info">By making channel private, only selected members have acess to read or connect to chis channel</string>
    <string name="label">Label</string>
    <string name="enter_a_label">Enter a label</string>
    <string name="uri">URI</string>
    <string name="enter_channel_uri">Enter channel URI</string>
    <string name="metadata">Metadata</string>
    <string name="enter_a_metadata">Enter a metadata</string>
    <string name="users">Users</string>
    <string name="need_permissions">Need permissions to chose avatar</string>
    <string name="uploading_avatar">Uploading avatar</string>
    <string name="uploaded_avatar">Avatar uploaded</string>
    <string name="creating_channel">Creating channel</string>
    <string name="clearing_history">Clearing History</string>
    <string name="leaving_channel">Leaving From Channel</string>
    <string name="cancel">Cancel</string>
    <string name="sceyt_change_role">Change role</string>
    <string name="editing_message">Editing message</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="deleting_message">Deleting message</string>
    <string name="delete_message">Delete message</string>
    <string name="display_name">Display name</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="enter_username">Enter username</string>
    <string name="shared_pref_key">sceyt_shared_prefererences</string>
    <string name="join">join</string>
    <string name="waiting_for_network_title">Waiting for network…</string>
    <string name="connecting_title">Connecting…</string>
    <string name="sceyt_set_owner">Set Owner</string>
    <string name="attachment">Attachment</string>
    <string name="react">React</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replay">Replay</string>
    <string name="replay_in_thread">Replay in thread</string>
    <string name="replays">Replays</string>
    <string name="thread_replay">Thread replay</string>
    <string name="with">with %s</string>

    <string name="sceyt_ui_channel_list_empty">No results found</string>
    <string name="sceyt_messages_list_empty">No messages yet</string>
    <string name="sceyt_no_proper_app_to_open_file">You may not have a proper app for viewing this content</string>
    <string name="sceyt_mark_as_read">Mark as read</string>
    <string name="sceyt_mark_as_unread">Mark as unread</string>
    <string name="sceyt_block">Block</string>
    <string name="sceyt_block_and_leave_channel">Block and leave channel</string>
    <string name="sceyt_empty_channels_description">You have no created channels yet, create one for sending messages.</string>
    <string name="sceyt_save">Save</string>
    <string name="sceyt_edit">Edit</string>
    <string name="sceyt_dark_theme">Dark Theme</string>
    <string name="sceyt_media">Media</string>
    <string name="sceyt_files">Files</string>
    <string name="sceyt_links">Links</string>
    <string name="sceyt_clear">Clear</string>
    <string name="sceyt_delete_message_title">Delete message?</string>
    <string name="sceyt_delete_message_body">Are you sure you want to delete this message?</string>
    <string name="sceyt_clear_history_title">Clear history?</string>
    <string name="sceyt_clear_history_desc">Are you sure you want to delete all messages?</string>
    <string name="sceyt_leave_channel_title">Leave channel?</string>
    <string name="sceyt_leave_channel_desc">Are you sure you want to leave channel?</string>
    <string name="sceyt_block_and_leave_channel_title">Block and leave channel?</string>
    <string name="sceyt_block_and_leave_channel_desc">Are you sure you want to block and leave channel?</string>
    <string name="sceyt_block_user_title">Block?</string>
    <string name="sceyt_block_user_desc">Are you sure you want to block this user?</string>
    <string name="sceyt_unblock_user_title">Unblock?</string>
    <string name="sceyt_unblock_user_desc">Are you sure you want to unblock this user?</string>
    <string name="sceyt_delete_channel_title">Delete channel?</string>
    <string name="sceyt_delete_channel_desc">Are you sure you want to delete channel?</string>
    <string name="sceyt_sign_out_title">Sign out?</string>
    <string name="sceyt_sign_out_desc">Are you sure you want to sign out?</string>
    <string name="sceyt_leave_channel">Leave Channel</string>
    <string name="sceyt_leave">Leave</string>
    <string name="sceyt_accept">Accept</string>
    <string name="sceyt_delete">Delete</string>
    <string name="sceyt_kick_member">Kick member</string>
    <string name="sceyt_unblock">Unblock</string>
    <string name="sceyt_no_media_items_yet">No media items yet</string>
    <string name="sceyt_no_file_items_yet">No file items yet</string>
    <string name="sceyt_no_link_items_yet">No link items yet</string>

    <string name="history_was_successfully_cleared">History was successfully cleared!</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="mute_for_1_hour">Mute for 1 hour</string>
    <string name="mute_for_2_hours">Mute for 2 hours</string>
    <string name="mute_for_1_day">Mute for 1 day</string>
    <string name="mute_forever">Mute forever</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="sceyt_typing">typing</string>
    <string name="new_group">New group</string>

</resources>