<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sceyt_mark_as_read"
        android:icon="@drawable/sceyt_ic_mark_as_read"
        android:title="@string/sceyt_mark_as_read"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sceyt_mark_as_unread"
        android:icon="@drawable/sceyt_ic_mark_as_unread"
        android:title="@string/sceyt_mark_as_unread"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sceyt_clear_history"
        android:icon="@drawable/sceyt_ic_trash"
        android:title="@string/clear_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sceyt_leave_channel"
        android:icon="@drawable/sceyt_ic_leave"
        android:title="@string/sceyt_leave_channel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sceyt_block_channel"
        android:icon="@drawable/sceyt_ic_block"
        android:title="@string/sceyt_block_and_leave_channel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sceyt_block_user"
        android:icon="@drawable/sceyt_ic_block"
        android:title="@string/sceyt_block"
        app:showAsAction="ifRoom" />

</menu>