<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:tint="@color/sceyt_color_accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sceyt_ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="10dp"
            android:text="@string/new_channel"
            android:textColor="@color/sceyt_color_text_themed"
            android:textSize="@dimen/bigTextSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icBack"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icSave"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="6dp"
            android:tint="@color/sceyt_color_accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sceyt_ic_save" />

        <ProgressBar
            android:id="@+id/loadingSave"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/icSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/icSave"
            app:srcCompat="@drawable/sceyt_radio_button_checked_state" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/underline"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/sceyt_color_divider"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <com.sceyt.chat.ui.presentation.customviews.SceytAvatarView
                android:id="@+id/avatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sceytAvatarBackgroundColor="#E3E7FF" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icEditPhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:background="@drawable/sceyt_bg_circle"
                android:backgroundTint="#60E3E7FF"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintEnd_toEndOf="@+id/avatar"
                app:layout_constraintStart_toStartOf="@id/avatar"
                app:layout_constraintTop_toTopOf="@id/avatar"
                app:srcCompat="@drawable/sceyt_ic_pick_photo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/subjectInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:ellipsize="end"
                android:hint="@string/hint_channel_subject"
                android:maxLines="2"
                android:textColor="@color/sceyt_color_text_themed"
                android:textColorHint="@color/sceyt_color_hint"
                android:textSize="@dimen/mediumTextSize"
                android:theme="@style/EditTextTheme"
                app:layout_constraintBottom_toBottomOf="@id/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="@id/avatar" />

            <View
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
                android:layout_height=".5dp"
                android:layout_marginTop="18dp"
                android:background="@color/sceyt_color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchChannelMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="18dp"
                android:text="@string/make_channel_private"
                android:textColor="@color/sceyt_color_text_themed"
                android:textSize="@dimen/mediumTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_view" />

            <TextView
                android:id="@+id/channelModeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_channel_private_info"
                android:textColor="@color/sceyt_color_gray_500"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/switchChannelMode"
                app:layout_constraintTop_toBottomOf="@id/switchChannelMode" />

            <View
                android:id="@+id/empty_view2"
                android:layout_width="wrap_content"
                android:layout_height=".5dp"
                android:layout_marginTop="18dp"
                android:background="@color/sceyt_color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/channelModeDesc" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/uriTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/uri"
                android:textColor="@color/sceyt_color_accent"
                android:textSize="@dimen/smallTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_view2" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/uriInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4dp"
                android:hint="@string/enter_channel_uri"
                android:textColor="@color/sceyt_color_text_themed"
                android:textColorHint="@color/sceyt_color_hint"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/uriTitle"
                app:layout_constraintTop_toBottomOf="@id/uriTitle" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupURI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="uriTitle,uriInput" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/label"
                android:textColor="@color/sceyt_color_accent"
                android:textSize="@dimen/smallTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uriInput" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/labelInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4dp"
                android:hint="@string/enter_a_label"
                android:textColor="@color/sceyt_color_divider"
                android:textColorHint="@color/sceyt_color_hint"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/labelTitle"
                app:layout_constraintTop_toBottomOf="@id/labelTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/metaDataTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/metadata"
                android:textColor="@color/sceyt_color_accent"
                android:textSize="@dimen/smallTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelInput" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/metaDataInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4dp"
                android:hint="@string/enter_a_metadata"
                android:textColor="@color/sceyt_color_text_themed"
                android:textColorHint="@color/sceyt_color_hint"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/metaDataTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


