<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.newchannel.NewChannelActivity">

    <com.sceyt.sceytchatuikit.presentation.customviews.SceytSearchableToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:sceytSearchableToolbarTitle="@string/new_channel" />

    <View
        android:id="@+id/dividerToolbar"
        android:layout_width="wrap_content"
        android:layout_height=".5dp"
        android:background="@color/sceyt_color_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/new_group"
        android:textColor="@color/sceyt_color_text_themed"
        android:textSize="@dimen/mediumTextSize"
        app:drawableLeftCompat="@drawable/channel_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sceyt_color_input"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="3dp"
        android:text="@string/users"
        android:textColor="@color/sceyt_color_text_themed"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintStart_toStartOf="@+id/tvNewGroup"
        app:layout_constraintTop_toBottomOf="@+id/tvNewGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvUsers"
        app:layout_constraintTop_toBottomOf="@+id/tvUsers"
        tools:listitem="@layout/item_user" />

</androidx.constraintlayout.widget.ConstraintLayout>