<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="enableConnect"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.login.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textColor="@color/sceyt_color_text_themed"
                    android:textSize="@dimen/superLargeTextSize"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_subtitle"
                    android:textColor="@color/sceyt_color_gray_500"
                    android:textSize="@dimen/mediumTextSize"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/username"
                    android:paddingStart="0dp"
                    android:paddingEnd="-10dp"
                    android:textColorHint="@color/sceyt_color_hint"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxCollapsedPaddingTop="5dp"
                    app:endIconMode="custom"
                    app:endIconTint="@color/sceyt_color_accent"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/subTitle"
                    app:placeholderText="@string/enter_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionNext"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:singleLine="true"
                        android:textColor="@color/sceyt_color_text_themed" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/displayNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/display_name"
                    android:paddingStart="0dp"
                    android:paddingEnd="-10dp"
                    android:textColorHint="@color/sceyt_color_hint"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxCollapsedPaddingTop="5dp"
                    app:endIconMode="custom"
                    app:endIconTint="@color/sceyt_color_accent"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/userNameTextField"
                    app:placeholderText="@string/enter_display_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/displayNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:singleLine="true"
                        android:textColor="@color/sceyt_color_text_themed" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:alpha="@{enableConnect? 1f : 0.5f}"
                    android:background="@drawable/sceyt_bg_corners_6"
                    android:enabled="@{enableConnect &amp; !loading}"
                    android:text="@{loading ? null: @string/connect, default = @string/connect}"
                    android:textColor="@color/sceyt_color_white"
                    android:textSize="@dimen/smallTextSize"
                    app:layout_constraintTop_toBottomOf="@+id/displayNameTextField" />

                <FrameLayout
                    android:id="@+id/layoutLoading"
                    visibleIf="@{loading}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:padding="8dp"
                    android:translationZ="4dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/submitButton"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="@+id/submitButton"
                    app:layout_constraintStart_toStartOf="@+id/submitButton"
                    app:layout_constraintTop_toTopOf="@+id/submitButton">

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:theme="@style/SceytProgressBarWhite"
                        app:layout_constraintBottom_toBottomOf="@+id/submitButton"
                        app:layout_constraintEnd_toEndOf="@+id/submitButton"
                        app:layout_constraintStart_toStartOf="@+id/submitButton"
                        app:layout_constraintTop_toTopOf="@+id/submitButton" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>